--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,16 @@ h3 {
   margin-bottom: 1em;
 }
 
+.copyright {
+  /* Copyright CSS */
+  background-color: var(--clr-brownish);
+  display: block;
+  padding: 1em 1em;
+  text-align: center;
+  font-size: medium;
+  color: var(--clr-dark);
+}
+
 /*Header*/
 
 .container {
@@ -430,7 +440,7 @@ h3 {
 
 .service {
   margin: 0 auto;
-  width: 31.3%;
+  width: 33.3%;
   float: left;
 }
 
