--- a/css/style.css
+++ b/css/style.css
@@ -180,6 +180,12 @@ h3 {
   color: var(--clr-dark);
 }
 
+.bg-clr {
+  background: var(--clr-dark_light);
+  background-size: 100%;
+  width: 100%;
+}
+
 /*Header*/
 
 .container {
@@ -441,26 +447,9 @@ h3 {
 .service {
   margin: 0 auto;
   width: 33.3%;
-  float: left;
 }
 
-@media (min-width: 800px) {
-  .services {
-    display: flex;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .service + .service {
-    margin-left: 2em;
-  }
-}
-
-.bg-clr {
-  background: var(--clr-dark_light);
-  background-size: 100%;
-  width: 100%;
-}
+/*About Me*/
 
 .about-me {
   max-width: 1000px;
